fix input on safari mobile

--- a/scss/imports/core/_layouts.scss
+++ b/scss/imports/core/_layouts.scss
@@ -7,6 +7,8 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility;
+    -moz-box-sizing:    border-box;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 html {
